# beam-preventive-behavior-abm

./: .cruft.json  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE.txt  Makefile  README.md  belief-unperturbed.sh  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml  ci.yml  docs.yml  publish.yml
abm/: .gitignore  README.md
abm/scripts/: abm.py  calibrate_heterogeneity_cdf.py  calibrate_homophily_gamma.py  export_experiment_bundle.py  export_full_sensitivity_bundle.py  export_thesis_artifacts.py  run_full_sensitivity_pipeline.py  update_canonical_summary.py
config/: levers.json
docs/: index.md  reproducibility.md
docs/api/: abm.md  anchoring.md  common.md  empirical.md  evaluation.md  index.md  llm.md  survey.md
docs/development/: contributing.md
empirical/: .gitignore  README.md
empirical/scripts/: __init__.py  anchor_prototypes.py  anchors.py  anchors_full_ref_pe.py  backbone_models.py  compute_descriptives.py  descriptive_statistics.py  export_thesis_artifacts.py  inferential_analysis.py  inferential_statistics.py  modeling.py
empirical/specs/: column_types.tsv  inferential_hypothesis.csv  inferential_hypothesis_vars.csv
evaluation/: .gitignore  README.md  __init__.py
evaluation/scripts/: export_thesis_artifacts.py  run_behavioural_outcomes_baseline.py  run_behavioural_outcomes_perturbed.py  run_belief_pe_ref_p.py  run_belief_update_perturbed.py  run_belief_update_unperturbed.py  run_choice_validation_perturbed.py  run_choice_validation_unperturbed.py  run_psychological_profile_reference_effects.py  run_psychological_profiles_baseline.py  run_psychological_profiles_perturbed.py
evaluation/specs/: belief_update_background_traits.json  belief_update_targets.json  prompt_tournament_max_model_len.json
preprocess/: .gitignore  README.md
preprocess/scripts/: build_clean_spec.py  build_column_types.py  build_derivations.py  fetch_ppp.py  main.py
preprocess/specs/: 5_clean_transformed_questions.json  5_general_transformed_questions.json  6_llm_transformed_questions.json  6_nn_transformed_questions.json  derivations.tsv
scripts/: extract_chapters.py  extract_qmd_text.py  run_flu_no_habit_gpt20b_data_only.sh
src/beam_abm/: __about__.py  __init__.py  settings.py
tests/: test_abm_cli_smoke.py  test_belief_pe_ref_p.py  test_decision_function_cli_smoke.py  test_decision_function_workflows.py  test_empirical_cli_smoke.py  test_empirical_workflows.py  test_evaluation_cli_smoke.py  test_evaluation_workflows.py  test_llm_microvalidation_cli_smoke.py  test_llm_microvalidation_workflows.py  test_microvalidation_smoke.py  test_package_structure_refactor.py  test_preprocess_clean_spec_and_pipeline.py  test_preprocess_import_surface.py  test_preprocess_semantics_consistency.py  test_run_llm_sampling_baseline_lookup.py  test_survey_cleaning_surface.py  test_thesis_artifact_contract.py
tests/abm/: __init__.py  test_belief_update_kernel.py  test_benchmarking.py  test_choice_module.py  test_cli_diagnostics.py  test_credibility_diagnostics.py  test_diagnostics_contracts.py  test_diagnostics_orchestrator.py  test_diagnostics_suites.py  test_effect_regimes.py  test_intensity_calibration.py  test_io.py  test_metrics.py  test_model_baseline_obs_share.py  test_network.py  test_outcome_allowlist.py  test_population_init.py  test_scenario_defs.py  test_sensitivity_pipeline.py  test_simulator_smoke.py  test_state_ref_attractor.py  test_update_module.py  test_workflows_diagnostics.py
thesis/: .gitignore  01-introduction.html  02-literature-review.qmd  03-methodology.html  03-methodology.qmd  03-modelling-decision-function.qmd  04-llm-micro-validation.qmd  05-agent-based-model.qmd  06-discussion-conclusion.qmd  07-bibliography.qmd  References.bib  _quarto.yml  abstract.txt  appendix-abm-equations.qmd  appendix-abm-sensitivity.qmd  appendix-abm-verification.html  appendix-anchoring-results.qmd  appendix-code.qmd  appendix-dataset-details.qmd  appendix-decision-architecture.qmd  appendix-example-prompts.qmd  appendix-glm-ice-derivation.qmd  appendix-llm-micro-validation.qmd  appendix-missing-data.qmd  appendix-modelling-results.qmd  appendix-offmanifold-conditional-percentile.qmd  before-body.tex  full-text.qmd  index.qmd  package-lock.json  package.json  styles.css
thesis/artifacts/: README.md
thesis/discussion/: transcript.md
thesis/machine_readable/: block_inventory.csv  choice_ref_models_variables.csv  engine_inventory.csv  ref_models_interactions.csv  ref_models_variables.csv  signal_block_inventory.csv  state_ref_models_variables.csv
thesis/presentation/: custom.scss  thesis-defense-slides.qmd
thesis/specs/: display_labels.json
thesis/utils/: __init__.py  analysis_utils.py  ch03_plot_tables.py  ch04_plot_tables.py  ch05_plot_tables.py  chapter_io.py  effect_utils.py  engine_labels.py  model_labels.py  (+5 more)
(+390 files in other folders)
